@@ -7,12 +7,32 @@ defaults:
     shell: bash
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
-        compiler:
-          - "gcc"
-          - "clang"
+        compiler: ["gcc", "clang"]
+        configure: [""]
+        include:
+          - description: "default"
+          - compiler: gcc
+            configure: "--disable-c-pkgconfig --disable-c-pages --disable-c-fsindex --disable-c-readerchannel --disable-c-writerchannel --disable-c-vfs"
+            description: "no pkgcfg, pages, fsindex, readedchannel, writerchannel, vfs"
+          - compiler: gcc
+            configure: "--disable-c-pages --disable-c-fsindex --disable-c-readerchannel --disable-c-writerchannel --disable-c-vfs"
+            description: "no pages, fsindex, readedchannel, writerchannel, vfs"
+          - compiler: gcc
+            configure: "--disable-c-fsindex --disable-c-readerchannel --disable-c-writerchannel --disable-c-vfs"
+            description: "no fsindex, readedchannel, writerchannel, vfs"
+          - compiler: gcc
+            configure: "--disable-c-readerchannel --disable-c-writerchannel --disable-c-vfs"
+            description: "no readedchannel, writerchannel, vfs"
+          - compiler: gcc
+            configure: "--disable-c-writerchannel --disable-c-vfs"
+            description: "no writerchannel, vfs"
+          - compiler: gcc
+            configure: "--disable-c-vfs"
+            description: "no vfs"
+    name: build (${{ matrix.compiler }}, ${{ matrix.description }})
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -22,14 +42,16 @@ jobs:
         run: |
           sudo apt-get install tcl8.6-dev tcl-vfs
           mkdir "$HOME/install dir"
-          echo "CFGOPT=--with-tcl=/usr/lib/tcl8.6" >> $GITHUB_ENV
+          echo "CFGOPT_COMMON=--with-tcl=/usr/lib/tcl8.6" >> $GITHUB_ENV
+          echo "CFGOPT_CUSTOM=$CONFIGURE" >> $GITHUB_ENV
           echo "CC=$COMPILER" >> $GITHUB_ENV
         env:
           COMPILER: ${{ matrix.compiler }}
           OPTS: ${{ matrix.compiler }}
+          CONFIGURE: ${{ matrix.configure }}
       - name: Configure
         run: |
-          ./configure $CFGOPT "--prefix=$HOME/install dir" "--exec-prefix=$HOME/install dir" --enable-xz || {
+          ./configure $CFGOPT_COMMON $CFGOPT_CUSTOM "--prefix=$HOME/install dir" "--exec-prefix=$HOME/install dir" || {
             cat config.log
             echo "::error::Failure during Configure"
             exit 1
